--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,12 @@ h1 {
     font-family: headerFont;
     padding: 10px;
 }
- 
+
+h2 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #E5CD9A;
+    padding: 20%;
+}
 p {
     font: 15px helvetica, Arial, sans-serif;
 } 
