--- a/styles.css
+++ b/styles.css
@@ -102,10 +102,17 @@ h1, h2, h3, p, a, .about_text, .some, div, small{
         sans-serif;
 } 
 
+h1 {
+    font-weight: 200;
+}
+
 h2 {
-    font-style: italic;
-    font-size: small;
     color:#32598C;
+    margin: 0 30px 0;
+}
+
+h3 {
+    font-weight: lighter;
 }
 
 .where {
@@ -115,14 +122,9 @@ h2 {
 /*sets the color and size of the paragraphs. Same font as h1,h2*/
 p {
     font-size: small;
-    color: #F29580;   
+    color: #F29580;
+    margin: 10px; 
 } 
-
-.about_text {
-    font-size: 16px;
-    color:#32598C;
-    border-radius: 10px;
-}
 
 /* FOOTER - all design*/
 footer {
@@ -174,9 +176,11 @@ body {
     height: 60px;
     top: 0;
 } .nav_list {
+    position: absolute;
     list-style-type: none; /*make sure you have this one, so you can make the list different*/
     overflow: hidden;
     margin-top: 5px; /*sa tittel og liste er pa linje*/
+    right:0;
 }
 /*alle nav_item orienteres fra overste i html til siste*/
 .nav_item {
@@ -210,11 +214,21 @@ a::before {
     overflow: auto;
 }
 
+/* About.html */
+.about_container {
+    position: relative;
+    margin: 15px;
+    left:30%;
+}
 .pb {
-    width: auto;
-    max-height: 120px;
-    min-height: 120px;
-    border-radius: 10px;
+    border-radius: 10%;
+    height: 20%;
+    width: 20%;
+    object-fit: scale-down;
+}
+
+.about_text {
+    width: 20%;
 }
 
 /*Drawings.html - img slideshow*/
@@ -234,6 +248,7 @@ a::before {
 .sshowbutt_prev, .sshowbutt_next{
     position: absolute;
     top: 50%;
+    font-size: 12px;
     width: auto;
     border-radius: 0 3px 3px 0;
     background-color: transparent;
@@ -250,6 +265,7 @@ a::before {
 .numbertext {
     color:#F29580;
     position: absolute;
+    font-size: 12px;
     top: 10px;
     right: 0;
 }
