New nav_menu home

--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,39 @@ a::before {
     margin: 0px 30px;
 }
 
+/*HOME _nav*/
+.home_nav {
+    display: inline-block;
+    justify-items: space-between;
+    align-items: center;
+    height: fit-content;
+    width: 100%;
+    top: 0;
+}
+
+.home_nav_list {
+    width: 100%;
+    list-style-type: none; /*make sure you have this one, so you can make the list different*/
+}
+
+/*FLOAT: alle nav_item orienteres fra overste i html til siste og at orienteringen er horisontal*/
+.home_nav_item {
+    margin: 25px;
+    background-color: #32598C;
+}
+
+/* a i nav_item skal se ut folgende: */
+.home_nav_item a {
+    color: #F29580;
+    padding: 10px 0; /*top&bottom left&right*/
+    text-decoration: none; /*take away the underline*/
+}
+
+/* The page (a-link) in menu being hovered over */
+a:hover {
+    color: #32598C;
+}
+
 /*Main content*/
 .main_content {
     padding: 15px;
