--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     .img_slideshow_container, .slide_img, .about_container {
         max-width: 100%;
     }
+
 }
 
 * {
@@ -115,16 +116,19 @@ h1 {
 } h2 {
     margin: 1vw;
     font-size: 3vw; /*set all fonts to vw (view window)*/
+    font-size: 3vmin;
     font-weight: 400;
-    color: #F29580;
+    color:#F29580;
 } h2 a {
     color:#F29580;
 } h3 {
     font-weight: 200;
+    font-size: 1.5vmin;
     font-size: 1.5vw;
 }
 p {
     margin: 1vw;
+    font-size: 1.5vmin;
     font-size: 1.5vw;
     color:#F29580;
 }
@@ -134,6 +138,7 @@ footer {
     min-width: 100%; /*covers whole screen*/
 }
 small {
+    font-size: 2vmin;
     font-size: 1.2vw;
     color:#F29580;
     float: right;
@@ -174,6 +179,7 @@ small {
 }
 /* a i nav_item skal se ut folgende: */
 .nav_item a {
+    font-size: 1.5vw;
     display: inline;
     color:#F29580;
     text-align: right;
@@ -273,6 +279,7 @@ button:hover {
     height: 100%;
     width: 100%;
     object-fit: scale-down;
+    border: 0.05vw solid #32598C;
 }
 
 .prev, .next{
