--- a/styles.css
+++ b/styles.css
@@ -317,21 +317,19 @@ button:hover {
 
 /* Projects.html*/
 .projects_list_container {
-    display: block;
+    display: inline;
 } .projects_list {
     padding: 0;
     list-style-type: none; /*make sure you have this one, so you can make the list different*/
-    margin: 5px;
-}.projects_li_item {
-    padding: 10px 0;
-    stroke: #F29580;
-    
+} .projects_li_item {
+    margin: 2em 0;
 }
 /* a i nav_item skal se ut folgende: */
 .projects_li_item a {
+    padding: auto;
+    font-size: 1.5em;
+    cursor: pointer;
     color: #F29580;
-    text-align: right;
-    padding: 10px 20px;
 } .projects_li_item a:hover{
     color:antiquewhite;
     background-color: #32598CD4;
